syntax = "proto3";

package configs;

import "Configs/dynamic_config.proto";
import "Simulation/state.proto";

// Interceptor type enumeration.
enum InterceptorType {
  INVALID_INTERCEPTOR = 0;
  HYDRA_70 = 1;
  MICROMISSILE = 2;
}

// Threat type enumeration.
enum ThreatType {
  INVALID_THREAT = 0;
  QUADCOPTER = 1;
  UCAV = 2;
  BRAHMOS = 3;
  ASCM = 4;
  FATEH_110B = 5;
}

// Attack behavior enumeration.
enum AttackBehaviorType {
  INVALID_ATTACK = 0;
  DEFAULT_DIRECT_ATTACK = 1;
  BRAHMOS_DIRECT_ATTACK = 2;
  FATEH_110B_DIRECT_ATTACK = 3;
}

// Agent configuration.
message AgentConfig {
  // Submunitions configuration.
  message SubmunitionsConfig {
    // Number of submunitions.
    uint32 num_submunitions = 1;

    // Agent configuration.
    AgentConfig agent_config = 2;
  }

  // Agent type.
  oneof type_oneof {
    // Interceptor type.
    InterceptorType interceptor_type = 1;

    // Threat type.
    ThreatType threat_type = 2;

    // Custom configuration.
    string config = 3;
  }

  // Attack behavior.
  oneof attack_behavior_oneof {
    // Attack behavior type.
    AttackBehaviorType attack_behavior_type = 4;

    // Custom attack behavior.
    string attack_behavior = 5;
  }

  // Initial state.
  simulation.State initial_state = 6;

  // Initial state standard deviation to randomize the state variables.
  simulation.State standard_deviation = 7;

  // Dynamic configuration.
  DynamicConfig dynamic_config = 8;

  // Submunitions configuration.
  SubmunitionsConfig submunitions_config = 9;
}
